--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -7,6 +7,101 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Sign InVC-->
+        <scene sceneID="Pc6-sa-84b">
+            <objects>
+                <viewController id="5qc-HS-yo8" customClass="SignInVC" customModule="jazzCatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lSK-Ur-ksn">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWG-6L-O5K">
+                                <rect key="frame" x="385" y="192" width="126" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sign-in With Email"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                        <viewLayoutGuide key="safeArea" id="zzN-7N-QRd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tay-Er-3hg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-252" y="-2186"/>
+        </scene>
+        <!--Create AccVC-->
+        <scene sceneID="QMt-fp-E04">
+            <objects>
+                <viewController id="wtM-ry-7rg" customClass="CreateAccVC" customModule="jazzCatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p4r-CQ-pk1">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9bb-uo-pJW">
+                                <rect key="frame" x="417" y="190" width="62.5" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SwM-HL-oLP">
+                                <rect key="frame" x="415" y="316" width="66" height="30"/>
+                                <state key="normal" title="Let's jam!"/>
+                                <connections>
+                                    <action selector="createAccButton:" destination="wtM-ry-7rg" eventType="touchUpInside" id="7ZX-qW-nor"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nickname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T2P-1d-sTn">
+                                <rect key="frame" x="403" y="121" width="90" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="emW-ps-YBc">
+                                <rect key="frame" x="403" y="256" width="90" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="err" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGK-bl-sdO">
+                                <rect key="frame" x="437" y="76" width="22" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQf-R1-iRz">
+                                <rect key="frame" x="377" y="47" width="142" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="T2P-1d-sTn" firstAttribute="top" secondItem="PGK-bl-sdO" secondAttribute="bottom" constant="24" id="0ug-I9-scN"/>
+                            <constraint firstItem="9bb-uo-pJW" firstAttribute="centerY" secondItem="p4r-CQ-pk1" secondAttribute="centerY" id="ADS-8V-OLw"/>
+                            <constraint firstItem="SwM-HL-oLP" firstAttribute="top" secondItem="emW-ps-YBc" secondAttribute="bottom" constant="26" id="Bg0-pq-JEb"/>
+                            <constraint firstItem="PGK-bl-sdO" firstAttribute="top" secondItem="p4r-CQ-pk1" secondAttribute="top" constant="76" id="Ck8-6c-lWz"/>
+                            <constraint firstItem="PGK-bl-sdO" firstAttribute="centerX" secondItem="T2P-1d-sTn" secondAttribute="centerX" id="K2n-n6-Shg"/>
+                            <constraint firstItem="PGK-bl-sdO" firstAttribute="centerX" secondItem="p4r-CQ-pk1" secondAttribute="centerX" id="Obx-lH-eHJ"/>
+                            <constraint firstItem="SwM-HL-oLP" firstAttribute="centerX" secondItem="9bb-uo-pJW" secondAttribute="centerX" id="Q77-jR-kS3"/>
+                            <constraint firstItem="BQf-R1-iRz" firstAttribute="centerX" secondItem="p4r-CQ-pk1" secondAttribute="centerX" id="URL-jm-0nH"/>
+                            <constraint firstItem="SwM-HL-oLP" firstAttribute="top" secondItem="9bb-uo-pJW" secondAttribute="bottom" constant="92" id="fGQ-uL-tfx"/>
+                            <constraint firstItem="9bb-uo-pJW" firstAttribute="centerX" secondItem="p4r-CQ-pk1" secondAttribute="centerX" id="oiZ-Ff-OOh"/>
+                            <constraint firstItem="emW-ps-YBc" firstAttribute="centerX" secondItem="p4r-CQ-pk1" secondAttribute="centerX" id="qdS-WF-XXQ"/>
+                            <constraint firstItem="PGK-bl-sdO" firstAttribute="top" secondItem="BQf-R1-iRz" secondAttribute="bottom" constant="8" id="vhf-0T-YKC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fp7-1I-9S6"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="9bb-uo-pJW" id="tEf-yZ-BSe"/>
+                        <outlet property="errorMessage" destination="PGK-bl-sdO" id="kDE-II-18h"/>
+                        <outlet property="nameTextField" destination="T2P-1d-sTn" id="uEe-ck-vCg"/>
+                        <outlet property="passwordTextField" destination="emW-ps-YBc" id="Lot-R1-SpE"/>
+                        <segue destination="wb8-yw-hpJ" kind="unwind" identifier="fromCreateAccToWelcomeUSegue" unwindAction="backToWelcomeFromCreateAccWithSegue:" id="aYn-xv-adM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bXD-gC-kzo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="wb8-yw-hpJ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="704" y="-2110"/>
+        </scene>
         <!--Welcome Screen-->
         <scene sceneID="PMF-k5-oVf">
             <objects>
@@ -15,29 +110,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lT-ZH-nOs">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lT-ZH-nOs">
                                 <rect key="frame" x="433" y="192" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play"/>
                                 <connections>
                                     <action selector="goToLevelSelect:" destination="dec-BY-2yf" eventType="touchUpInside" id="OF9-RG-t8Y"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fd-0C-cez">
-                                <rect key="frame" x="417" y="265" width="63" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fd-0C-cez">
+                                <rect key="frame" x="416.5" y="265" width="63" height="30"/>
                                 <state key="normal" title="Freestyle"/>
                                 <connections>
                                     <action selector="goToFreestyle:" destination="dec-BY-2yf" eventType="touchUpInside" id="exh-Ox-eJT"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwI-vr-1dK" userLabel="currentUser">
+                                <rect key="frame" x="265" y="123" width="71" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edd-Rg-unA">
+                                <rect key="frame" x="785" y="20" width="57" height="30"/>
+                                <state key="normal" title="Sign out"/>
+                                <connections>
+                                    <action selector="signOut:" destination="dec-BY-2yf" eventType="touchUpInside" id="0ue-8e-1J5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="1Fd-0C-cez" firstAttribute="centerX" secondItem="7lT-ZH-nOs" secondAttribute="centerX" id="4ln-N7-hTC"/>
+                            <constraint firstItem="1Fd-0C-cez" firstAttribute="top" secondItem="7lT-ZH-nOs" secondAttribute="bottom" constant="43" id="AI2-47-qp9"/>
+                            <constraint firstItem="GyB-rx-roN" firstAttribute="trailing" secondItem="edd-Rg-unA" secondAttribute="trailing" constant="10" id="E5n-dA-Qad"/>
+                            <constraint firstItem="GyB-rx-roN" firstAttribute="bottom" secondItem="1Fd-0C-cez" secondAttribute="bottom" constant="98" id="Qo2-Hf-pPg"/>
+                            <constraint firstItem="edd-Rg-unA" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="20" id="Tg3-dt-tD9"/>
+                            <constraint firstItem="1Fd-0C-cez" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="aKC-sV-dW5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GyB-rx-roN"/>
                     </view>
                     <connections>
+                        <outlet property="userIDLabel" destination="xwI-vr-1dK" id="B0X-KY-8Y4"/>
                         <segue destination="uKC-AO-KPp" kind="presentation" identifier="fromWelcomeToFreestyleSegue" id="GLW-ER-AVP"/>
                         <segue destination="4gq-Lp-7HN" kind="presentation" identifier="fromWelcomeToLevelSelectSegue" id="vav-ul-C7h"/>
+                        <segue destination="wtM-ry-7rg" kind="presentation" identifier="fromWelcomeToCreateAccSegue" id="2kX-vV-3nd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7HT-fr-dfd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -335,6 +452,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Lga-rB-OrQ"/>
+        <segue reference="GLW-ER-AVP"/>
     </inferredMetricsTieBreakers>
 </document>
