--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -188,9 +188,8 @@
                                     <action selector="goToFreestyle:" destination="dec-BY-2yf" eventType="touchUpInside" id="exh-Ox-eJT"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwI-vr-1dK" userLabel="currentUser">
-                                <rect key="frame" x="265" y="123" width="71" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwI-vr-1dK" userLabel="currentUser">
+                                <rect key="frame" x="243" y="123" width="71" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -202,15 +201,26 @@
                                     <action selector="signOut:" destination="dec-BY-2yf" eventType="touchUpInside" id="0ue-8e-1J5"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rn4-dd-hW6">
+                                <rect key="frame" x="403" y="100" width="90" height="30"/>
+                                <state key="normal" title="Level Groups"/>
+                                <connections>
+                                    <action selector="goToLevelGroups:" destination="dec-BY-2yf" eventType="touchUpInside" id="6J9-36-Pst"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="1Fd-0C-cez" firstAttribute="centerX" secondItem="7lT-ZH-nOs" secondAttribute="centerX" id="4ln-N7-hTC"/>
                             <constraint firstItem="1Fd-0C-cez" firstAttribute="top" secondItem="7lT-ZH-nOs" secondAttribute="bottom" constant="43" id="AI2-47-qp9"/>
                             <constraint firstItem="GyB-rx-roN" firstAttribute="trailing" secondItem="edd-Rg-unA" secondAttribute="trailing" constant="10" id="E5n-dA-Qad"/>
+                            <constraint firstItem="Rn4-dd-hW6" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="OeQ-x8-cSm"/>
                             <constraint firstItem="GyB-rx-roN" firstAttribute="bottom" secondItem="1Fd-0C-cez" secondAttribute="bottom" constant="98" id="Qo2-Hf-pPg"/>
                             <constraint firstItem="edd-Rg-unA" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="20" id="Tg3-dt-tD9"/>
+                            <constraint firstItem="Rn4-dd-hW6" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="100" id="WM0-zU-WaR"/>
                             <constraint firstItem="1Fd-0C-cez" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="aKC-sV-dW5"/>
+                            <constraint firstItem="Rn4-dd-hW6" firstAttribute="leading" secondItem="xwI-vr-1dK" secondAttribute="trailing" constant="89" id="cu4-Yx-dyn"/>
+                            <constraint firstItem="xwI-vr-1dK" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="123" id="y19-mL-0OS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GyB-rx-roN"/>
                     </view>
@@ -219,11 +229,56 @@
                         <segue destination="uKC-AO-KPp" kind="presentation" identifier="fromWelcomeToFreestyleSegue" id="GLW-ER-AVP"/>
                         <segue destination="4gq-Lp-7HN" kind="presentation" identifier="fromWelcomeToLevelSelectSegue" id="vav-ul-C7h"/>
                         <segue destination="5qc-HS-yo8" kind="presentation" identifier="fromWelcomeToSignInSegue" id="mba-eb-Z7X"/>
+                        <segue destination="eET-rt-TJ4" kind="presentation" identifier="fromWelcomeToLevelGroupsSegue" id="ydH-AR-R67"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7HT-fr-dfd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="39" y="-1072"/>
+        </scene>
+        <!--Level GroupsVC-->
+        <scene sceneID="VPB-dH-9Et">
+            <objects>
+                <viewController id="eET-rt-TJ4" customClass="LevelGroupsVC" customModule="jazzCatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bpi-wI-wYJ">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="csf-sm-4Td">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                                <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U5U-G5-Nvo">
+                                <rect key="frame" x="44" y="20" width="97" height="30"/>
+                                <state key="normal" title="Back To Menu"/>
+                                <connections>
+                                    <action selector="unwindFromLevelGroupsToWelcome:" destination="eET-rt-TJ4" eventType="touchUpInside" id="AmL-0u-ETK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="csf-sm-4Td" firstAttribute="leading" secondItem="Bpi-wI-wYJ" secondAttribute="leading" id="1r5-yo-SrZ"/>
+                            <constraint firstItem="U5U-G5-Nvo" firstAttribute="top" secondItem="mXU-uT-XKR" secondAttribute="top" constant="20" id="8S1-4r-e85"/>
+                            <constraint firstAttribute="bottom" secondItem="csf-sm-4Td" secondAttribute="bottom" id="SZG-ze-j76"/>
+                            <constraint firstAttribute="trailing" secondItem="csf-sm-4Td" secondAttribute="trailing" id="TlE-vf-sLs"/>
+                            <constraint firstItem="csf-sm-4Td" firstAttribute="centerX" secondItem="Bpi-wI-wYJ" secondAttribute="centerX" id="e5S-RQ-HuJ"/>
+                            <constraint firstItem="U5U-G5-Nvo" firstAttribute="leading" secondItem="mXU-uT-XKR" secondAttribute="leading" id="erU-Gf-O1O"/>
+                            <constraint firstItem="csf-sm-4Td" firstAttribute="centerY" secondItem="Bpi-wI-wYJ" secondAttribute="centerY" id="fre-Zx-ZxN"/>
+                            <constraint firstItem="csf-sm-4Td" firstAttribute="top" secondItem="mXU-uT-XKR" secondAttribute="top" id="iOt-F0-DXr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mXU-uT-XKR"/>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="csf-sm-4Td" id="NXM-LJ-W0R"/>
+                        <segue destination="4bv-19-uqW" kind="unwind" identifier="fromLevelGroupsToWelcomeUSegue" unwindAction="backToWelcomeFromLevelGroupsWithSegue:" id="9EM-F2-gev"/>
+                        <segue destination="4gq-Lp-7HN" kind="presentation" identifier="fromLevelGroupsToLevelSelectSegue" id="wCB-rj-d9R"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N5L-w8-v8B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="4bv-19-uqW" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-1104.2410714285713" y="-191.30434782608697"/>
         </scene>
         <!--Level Select-->
         <scene sceneID="Nn8-A1-Mdv">
@@ -295,6 +350,7 @@
                         <viewLayoutGuide key="safeArea" id="nGk-aJ-aHf"/>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="a3V-IE-ijI" id="TTS-Nk-ago"/>
                         <segue destination="uKC-AO-KPp" kind="presentation" identifier="goToLevelSegue" id="Lga-rB-OrQ"/>
                         <segue destination="YCr-aj-dNT" kind="unwind" identifier="fromLevelSelectToWelcomeUSegue" unwindAction="backToWelcomeFromLevelSelectWithSegue:" id="VTI-C1-foa"/>
                     </connections>
@@ -302,7 +358,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bfb-PF-67I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="YCr-aj-dNT" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-554.46428571428567" y="-191.30434782608697"/>
+            <point key="canvasLocation" x="-462" y="-191"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="Nob-v2-Xgg">
@@ -322,7 +378,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qRa-Zk-2Eb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="CZD-oz-aex" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="198" y="-191"/>
+            <point key="canvasLocation" x="402" y="-191"/>
         </scene>
         <!--Settings PopupVC-->
         <scene sceneID="Jh0-xZ-8Te">
@@ -484,10 +540,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7fI-9r-0wi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="198" y="541"/>
+            <point key="canvasLocation" x="402" y="607"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Lga-rB-OrQ"/>
+        <segue reference="wCB-rj-d9R"/>
     </inferredMetricsTieBreakers>
 </document>
