--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -542,6 +542,99 @@
             </objects>
             <point key="canvasLocation" x="402" y="607"/>
         </scene>
+        <!--Note Select PopupVC-->
+        <scene sceneID="uvy-fh-Q99">
+            <objects>
+                <viewController storyboardIdentifier="noteSelectPopoverID" id="Kz6-53-fNS" customClass="NoteSelectPopupVC" customModule="jazzCatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kId-nj-0KQ">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lkd-YW-Xu8">
+                                <rect key="frame" x="60" y="20" width="776" height="304"/>
+                                <color key="backgroundColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m8t-HY-Bdp">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="noteSelection" id="t37-14-O1v" customClass="NoteSelectCell" customModule="jazzCatsApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gcI-1u-Uim">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5yS-wE-dJY">
+                                                    <rect key="frame" x="19" y="0.0" width="91" height="84"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0oO-4C-nDw">
+                                                    <rect key="frame" x="43" y="99" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="0oO-4C-nDw" secondAttribute="bottom" constant="8" id="6Io-at-GS4"/>
+                                                <constraint firstItem="0oO-4C-nDw" firstAttribute="top" secondItem="5yS-wE-dJY" secondAttribute="bottom" constant="15" id="DTo-Ae-do2"/>
+                                                <constraint firstItem="5yS-wE-dJY" firstAttribute="top" secondItem="gcI-1u-Uim" secondAttribute="top" id="KQ6-kw-HuF"/>
+                                                <constraint firstItem="0oO-4C-nDw" firstAttribute="top" secondItem="5yS-wE-dJY" secondAttribute="bottom" constant="15" id="L0Z-cw-QNa"/>
+                                                <constraint firstItem="0oO-4C-nDw" firstAttribute="leading" secondItem="gcI-1u-Uim" secondAttribute="leading" constant="43" id="YZv-2e-v6v"/>
+                                                <constraint firstItem="5yS-wE-dJY" firstAttribute="leading" secondItem="gcI-1u-Uim" secondAttribute="leading" constant="19" id="aKI-JF-wJa"/>
+                                                <constraint firstAttribute="trailing" secondItem="0oO-4C-nDw" secondAttribute="trailing" constant="43" id="bRC-ih-a1U"/>
+                                                <constraint firstAttribute="trailing" secondItem="5yS-wE-dJY" secondAttribute="trailing" constant="18" id="zFD-HH-EgO"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="noteCellImage" destination="5yS-wE-dJY" id="hSd-vl-1Xz"/>
+                                            <outlet property="noteCellLabel" destination="0oO-4C-nDw" id="jah-ad-5y0"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Kz6-53-fNS" id="OiA-ul-rgb"/>
+                                    <outlet property="delegate" destination="Kz6-53-fNS" id="MI6-bt-VLY"/>
+                                </connections>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWf-83-zqF">
+                                <rect key="frame" x="94" y="332" width="73" height="30"/>
+                                <state key="normal" title="nevermind"/>
+                                <connections>
+                                    <action selector="cancelButton:" destination="Kz6-53-fNS" eventType="touchUpInside" id="mze-n8-oXG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50V-Iu-RJd">
+                                <rect key="frame" x="727" y="332" width="92" height="30"/>
+                                <state key="normal" title="yes this note!"/>
+                                <connections>
+                                    <action selector="selectButton:" destination="Kz6-53-fNS" eventType="touchUpInside" id="o26-Vy-tOr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="lkd-YW-Xu8" firstAttribute="leading" secondItem="t5C-hN-sMy" secondAttribute="leading" constant="16" id="1KW-Ul-D3b"/>
+                            <constraint firstItem="t5C-hN-sMy" firstAttribute="bottom" secondItem="lkd-YW-Xu8" secondAttribute="bottom" constant="69" id="Jbb-7U-CAY"/>
+                            <constraint firstItem="50V-Iu-RJd" firstAttribute="baseline" secondItem="qWf-83-zqF" secondAttribute="baseline" id="ZQ0-TZ-DkF"/>
+                            <constraint firstItem="lkd-YW-Xu8" firstAttribute="top" secondItem="t5C-hN-sMy" secondAttribute="top" constant="20" id="ZVi-dK-YO5"/>
+                            <constraint firstItem="t5C-hN-sMy" firstAttribute="bottom" secondItem="qWf-83-zqF" secondAttribute="bottom" constant="31" id="e2h-36-5bB"/>
+                            <constraint firstItem="t5C-hN-sMy" firstAttribute="trailing" secondItem="50V-Iu-RJd" secondAttribute="trailing" constant="33" id="ePl-oy-okR"/>
+                            <constraint firstItem="t5C-hN-sMy" firstAttribute="trailing" secondItem="lkd-YW-Xu8" secondAttribute="trailing" constant="16" id="gPC-b8-fl7"/>
+                            <constraint firstItem="qWf-83-zqF" firstAttribute="leading" secondItem="t5C-hN-sMy" secondAttribute="leading" constant="50" id="n9c-ZX-wKf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="t5C-hN-sMy"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="lkd-YW-Xu8" id="734-9Y-Cy8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bwu-wx-P63" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="401.78571428571428" y="1366.6666666666667"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Lga-rB-OrQ"/>
